yaml_parser/tests/fail/invalid-block-mapping-key-on-same-line-as-previous-key.snap
---
source: yaml_parser/tests/fail.rs
---
parse error at line 2, column 12
  |
2 | x: { y: z }in: valid
  |            ^
expected `...`
